--- a/src/sass/desktop/_mixin.scss
+++ b/src/sass/desktop/_mixin.scss
@@ -22,4 +22,19 @@ $color-blue: #252247;
     from {opacity: .1}
     to {opacity: 1}
 }
+
+.fade-out {
+    animation-name: fadeOut;
+    animation-duration: 1s;
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1s;
+  }
+@-webkit-keyframes fadeOut {
+    from {opacity:1}
+    to {opacity: .1}
+}
   
+@keyframes fadeOut {
+    from {opacity: 1}
+    to {opacity: .1}
+}
