--- a/src/sass/desktop/_background.scss
+++ b/src/sass/desktop/_background.scss
@@ -92,7 +92,7 @@
             padding: 18px;
             line-height: 26px;
             font-size: 16px;
-            background: rgba(255, 255, 255, 0.2);
+            background: #4D4168;
             backdrop-filter: blur(5px);
             display: none;
 
