--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,5 @@
 @import 'desktop/service-modal';
 @import 'desktop/popup-callback';
 @import 'desktop/modal';
-
-
+@import 'desktop/modal-contacts';
 //mobile
