--- a/src/sass/desktop/_grid.scss
+++ b/src/sass/desktop/_grid.scss
@@ -33,3 +33,19 @@ body.service-modal-debt__active .service-modal-debt {
 body.popup-callback__active .popup-callback {
     transform: translateX(0%);
 }
+
+body.mobile-modal__active .mobile-modal {
+    display: 'block';
+}
+body.mobile-contacts__active .mobile-contacts {
+    display: 'block';
+}
+body.mobile-service__active .mobile-service {
+    display: 'block';
+}
+body.mobile-debt__active .mobile-debt {
+    display: 'block';
+}
+body.mobile-popup-callback__active .mobile-popup-callback {
+    display: 'block';
+}
