--- a/src/sass/desktop/_hero.scss
+++ b/src/sass/desktop/_hero.scss
@@ -10,6 +10,7 @@ footer {
     position: relative;
     width: 100%;
     overflow: hidden;
+    display: none;
     &-footer {
         @include Roboto;
         padding-bottom: 55px;
