--- a/src/css/main.css
+++ b/src/css/main.css
@@ -733,11 +733,15 @@ input::-webkit-input-placeholder {
 
 .mob-container {
   position: relative;
-  width: 320px;
+  width: auto;
   padding: 20px;
   margin: auto;
   background: url("../img/mobile/линии.png") no-repeat bottom, linear-gradient(274.6deg, rgba(78, 77, 94, 0.24) 2.58%, #0F0C27 55.17%), radial-gradient(238.86px at -2.08% 64.75%, rgba(37, 34, 71, 0.7) 0%, #080521 100%);
   background-size: cover;
+}
+
+.mobile {
+  display: none;
 }
 
 .mobile-slide {
@@ -1041,6 +1045,8 @@ input::-webkit-input-placeholder {
   line-height: 26px;
   font-size: 16px;
   background: #4D4168;
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(25px);
   backdrop-filter: blur(5px);
   display: none;
 }
@@ -1172,7 +1178,7 @@ footer {
   position: relative;
   width: 100%;
   overflow: hidden;
-  display: none;
+  display: block;
 }
 
 .hero-footer {
@@ -2244,4 +2250,14 @@ input::-webkit-input-placeholder {
   transition: 0.5s;
   z-index: 99;
   transform: translateX(100%);
+}
+
+@media (max-width: 1000px) {
+  .hero {
+    display: none;
+  }
+
+  .mobile {
+    display: block;
+  }
 }
