--- a/src/sass/desktop/_background.scss
+++ b/src/sass/desktop/_background.scss
@@ -93,6 +93,8 @@
             line-height: 26px;
             font-size: 16px;
             background: #4D4168;
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(25px);
             backdrop-filter: blur(5px);
             display: none;
 
@@ -148,3 +150,4 @@
         transform: scale(1.15)
     }
 }
+ 
