--- a/src/sass/desktop/_grid.scss
+++ b/src/sass/desktop/_grid.scss
@@ -13,6 +13,7 @@
 body {
     background: linear-gradient(308.68deg, rgba(78, 77, 94, 0.24) 2.58%, #0F0C27 55.17%), radial-gradient(849.03px at -2.08% 64.75%, rgba(37, 34, 71, 0.7) 0%, #080521 100%) ; 
     height: 100vh;
+    overflow: hidden;
     @include Merri;
 }
 a {
@@ -48,4 +49,7 @@ body.mobile-debt__active .mobile-debt {
 }
 body.mobile-popup-callback__active .mobile-popup-callback {
     display: 'block';
+}
+.blur {
+    filter: blur(5px);
 }
