--- a/src/sass/desktop/_hero.scss
+++ b/src/sass/desktop/_hero.scss
@@ -4,6 +4,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
+
 }
 .hero {
     height: 100vh;
@@ -11,6 +12,8 @@ footer {
     width: 100%;
     overflow: hidden;
     display: block;
+    transition: 0.5s;
+    z-index: 1;     
     &-footer {
         @include Roboto;
         padding-bottom: 55px;
@@ -114,6 +117,7 @@ footer {
     }
     &-map {
         margin-top: 40px;
+        padding-right: 20px;
         width: 100%;
         height: 300px;
     }
@@ -121,6 +125,7 @@ footer {
 
 .links {
     &-slider {
+        width: 160px;
         margin-top: 50px;
     }
     &-slide {
