--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1929,4 +1929,12 @@ input::-webkit-input-placeholder {
   .mobile {
     display: block;
   }
+
+  .modal-window {
+    display: none;
+  }
+
+  .popup-callback {
+    display: none;
+  }
 }
