--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,4 +17,10 @@
     .mobile {
         display: block;
     }
+    .modal-window {
+        display: none;
+    }
+    .popup-callback {
+        display: none;
+    }
 }
