--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,33 +1,3 @@
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
-  }
-}
-
 .mobile-contacts {
   top: 380px;
   position: absolute;
@@ -82,36 +52,6 @@
   padding-top: 27px;
   background: linear-gradient(273.69deg, rgba(78, 77, 94, 0.24) 2.58%, #0F0C27 55.17%), radial-gradient(278.57px at -2.08% 64.75%, rgba(37, 34, 71, 0.7) 0%, #080521 100%);
 }
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
-  }
-}
-
 .mobile-debt {
   top: 380px;
   position: absolute;
@@ -222,36 +162,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
-  }
-}
-
 .mobile-modal {
   top: 380px;
   position: absolute;
@@ -301,36 +211,6 @@
   padding-top: 27px;
   background: linear-gradient(273.69deg, rgba(78, 77, 94, 0.24) 2.58%, #0F0C27 55.17%), radial-gradient(278.57px at -2.08% 64.75%, rgba(37, 34, 71, 0.7) 0%, #080521 100%);
 }
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
-  }
-}
-
 .total {
   width: 100%;
 }
@@ -348,7 +228,7 @@
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 320px;
+  width: 100%;
   height: 100%;
   background: rgba(77, 74, 98, 0.5);
   backdrop-filter: blur(10px);
@@ -412,36 +292,6 @@ input::-moz-placeholder {
 input::-webkit-input-placeholder {
   color: rgba(247, 247, 247, 0.603);
 }
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
-  }
-}
-
 .mobile-service {
   top: 380px;
   position: absolute;
@@ -746,36 +596,6 @@ input::-webkit-input-placeholder {
   transform: translateX(100%);
   z-index: 99;
 }
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
-  }
-}
-
 .particle-bg {
   position: absolute;
   top: 0;
@@ -876,10 +696,7 @@ input::-webkit-input-placeholder {
   padding: 18px;
   line-height: 26px;
   font-size: 16px;
-  background: #4D4168;
-  background: rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(25px);
-  backdrop-filter: blur(5px);
+  background: #605970;
   display: none;
 }
 
@@ -941,36 +758,6 @@ input::-webkit-input-placeholder {
 
   to {
     transform: scale(1.15);
-  }
-}
-
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
   }
 }
 
@@ -1127,36 +914,6 @@ footer {
   transform: translateX(0%);
 }
 
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
-  }
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -1171,7 +928,7 @@ footer {
 
 body {
   background: linear-gradient(308.68deg, rgba(78, 77, 94, 0.24) 2.58%, #0F0C27 55.17%), radial-gradient(849.03px at -2.08% 64.75%, rgba(37, 34, 71, 0.7) 0%, #080521 100%);
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
   font-family: 'Merriweather', serif;
 }
@@ -1224,36 +981,6 @@ body.mobile-popup-callback__active .mobile-popup-callback {
   filter: blur(5px);
 }
 
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
-  }
-}
-
 .form-button {
   font-family: 'Merriweather', serif;
   font-weight: bold;
@@ -1274,36 +1001,6 @@ body.mobile-popup-callback__active .mobile-popup-callback {
   margin-bottom: 20px;
 }
 
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
-  }
-}
-
 .modal {
   position: absolute;
   width: 79.5%;
@@ -1316,17 +1013,6 @@ body.mobile-popup-callback__active .mobile-popup-callback {
   transition: 0.5s;
   transform: translateX(100%);
   z-index: 99;
-}
-
-.modal-blur {
-  position: absolute;
-  width: 79.5%;
-  top: 0;
-  right: 0;
-  height: 100vh;
-  z-index: -1;
-  background: rgba(77, 74, 98, 0.7);
-  filter: blur(5px);
 }
 
 .modal-wrap {
@@ -1429,36 +1115,6 @@ body.mobile-popup-callback__active .mobile-popup-callback {
   background-color: #666;
 }
 
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
-  }
-}
-
 .service-modal {
   position: absolute;
   width: 79.5%;
@@ -1466,7 +1122,6 @@ body.mobile-popup-callback__active .mobile-popup-callback {
   right: 0;
   height: 100vh;
   background: rgba(77, 74, 98, 0.7);
-  backdrop-filter: blur(5px);
   margin-left: 400px;
   transition: 0.5s;
   transform: translateX(100%);
@@ -1499,7 +1154,6 @@ body.mobile-popup-callback__active .mobile-popup-callback {
   height: 40vh;
   padding: 5vh 3vw 0vh 10vw;
   background: rgba(77, 74, 98, 0.7);
-  backdrop-filter: blur(5px);
 }
 
 .service-modal-footer__attach {
@@ -1639,36 +1293,6 @@ body.mobile-popup-callback__active .mobile-popup-callback {
   background-color: #666;
 }
 
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
-  }
-}
-
 .total {
   width: 100%;
 }
@@ -1686,7 +1310,6 @@ body.mobile-popup-callback__active .mobile-popup-callback {
   width: 100%;
   height: 100vh;
   background: rgba(77, 74, 98, 0.7);
-  backdrop-filter: blur(5px);
   transition: 0.3s;
   transform: translateX(100%);
   z-index: 99;
@@ -1703,7 +1326,6 @@ body.mobile-popup-callback__active .mobile-popup-callback {
   width: 655px;
   padding: 60px 30px 50px 105px;
   background: linear-gradient(234.74deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%), rgba(77, 74, 98, 0.7);
-  backdrop-filter: blur(25px);
 }
 
 .popup-callback-title {
@@ -1752,36 +1374,6 @@ input::-webkit-input-placeholder {
   color: rgba(247, 247, 247, 0.603);
 }
 
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
-  }
-}
-
 .modal {
   position: absolute;
   width: 79.5%;
@@ -1794,17 +1386,6 @@ input::-webkit-input-placeholder {
   transition: 0.5s;
   transform: translateX(100%);
   z-index: 99;
-}
-
-.modal-blur {
-  position: absolute;
-  width: 79.5%;
-  top: 0;
-  right: 0;
-  height: 100vh;
-  z-index: -1;
-  background: rgba(77, 74, 98, 0.7);
-  filter: blur(5px);
 }
 
 .modal-wrap {
@@ -1936,5 +1517,9 @@ input::-webkit-input-placeholder {
 
   .popup-callback {
     display: none;
+  }
+
+  body {
+    overflow: auto;
   }
 }
