--- a/src/sass/desktop/_background.scss
+++ b/src/sass/desktop/_background.scss
@@ -1,4 +1,3 @@
-@import 'mixin';
 .particle-bg {
     position: absolute;
     top: 0;
@@ -85,17 +84,14 @@
         &__bank, &__delete, &__buy, &__debt {
             margin-left: 45px;
             margin-top: 10px;
-            @include Roboto;
+            font-family: 'Roboto', sans-serif;
             display: block;
             font-weight: 400;
             width: 510px;
             padding: 18px;
             line-height: 26px;
             font-size: 16px;
-            background: #4D4168;
-            background: rgba(255, 255, 255, 0.2);
-            backdrop-filter: blur(25px);
-            backdrop-filter: blur(5px);
+            background: #605970;
             display: none;
 
         }
