--- a/src/sass/desktop/_grid.scss
+++ b/src/sass/desktop/_grid.scss
@@ -1,9 +1,8 @@
-@import 'mixin';
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    color: $color-white
+    color: #ffffff;
 }
 .container {
     max-width: 90%;
@@ -12,9 +11,9 @@
 
 body {
     background: linear-gradient(308.68deg, rgba(78, 77, 94, 0.24) 2.58%, #0F0C27 55.17%), radial-gradient(849.03px at -2.08% 64.75%, rgba(37, 34, 71, 0.7) 0%, #080521 100%) ; 
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
-    @include Merri;
+    font-family: 'Merriweather', serif;
 }
 a {
     text-decoration: none
