--- a/src/sass/desktop/_hero.scss
+++ b/src/sass/desktop/_hero.scss
@@ -1,4 +1,3 @@
-@import 'mixin';
 footer {
     position: absolute;
     left: 0;
@@ -15,7 +14,7 @@ footer {
     transition: 0.5s;
     z-index: 1;     
     &-footer {
-        @include Roboto;
+        font-family: 'Roboto', sans-serif;
         padding-bottom: 55px;
         display: flex;
         flex-wrap: wrap;
@@ -60,7 +59,7 @@ footer {
     background: linear-gradient(260.18deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 80.23%), rgba(255, 255, 255, 0.25);
     &-text { 
         
-        color: $color-blue;
+        color: #252247;
     }
     &-arrow {
         margin: 0 30px 0 23px;
@@ -77,7 +76,7 @@ footer {
     padding-top: 28px;
     &__name {
         text-transform: uppercase;
-        @include Merri;
+        font-family: 'Merriweather', serif;
         font-size: 48px;
     }
     &__subtitle {
@@ -103,8 +102,7 @@ footer {
         margin-bottom: 15px;
         &__info {
             margin-left: 18px;
-            @include Merri;
-
+            font-family: 'Merriweather', serif;
         }
         &__message {
             margin-left: 4px;
