--- a/src/sass/desktop/_modal.scss
+++ b/src/sass/desktop/_modal.scss
@@ -1,4 +1,3 @@
-@import 'mixin';
 .modal {
     position: absolute;
     width: 79.5%;
@@ -11,16 +10,7 @@
     transition: 0.5s;
     transform: translateX(100%);
     z-index: 99;
-    &-blur {
-        position: absolute;
-        width: 79.5%;
-        top: 0;
-        right: 0;
-        height: 100vh;
-        z-index: -1;
-        background: rgba(77, 74, 98, 0.7);
-        filter: blur(5px);
-    }
+    
     &-wrap {
         position: relative;
         display: flex;
@@ -74,7 +64,7 @@
         max-height: 800px;
         line-height: 34px;
         font-size: 20px;
-        @include Roboto;
+        font-family: 'Roboto', sans-serif;
         font-weight: 300;
         padding-right: 100px;
     }
