--- a/src/sass/desktop/_service-modal.scss
+++ b/src/sass/desktop/_service-modal.scss
@@ -1,4 +1,3 @@
-@import 'mixin';
 .service-modal {
     position: absolute;
     width: 79.5%;
@@ -6,7 +5,6 @@
     right: 0;
     height: 100vh;
     background: rgba(77, 74, 98, 0.7);
-    backdrop-filter: blur(5px);
     margin-left: 400px;
     transition: 0.5s;
     transform: translateX(100%);
@@ -34,7 +32,6 @@
         height: 40vh;
         padding: 5vh 3vw 0vh 10vw;
         background: rgba(77, 74, 98, 0.7);
-        backdrop-filter: blur(5px);
         &__attach {
             width: 14px;
             height: 15px;
@@ -44,7 +41,7 @@
         &__add-file {
             flex-basis: 100%;
             label {
-                @include Roboto;
+                font-family: 'Roboto', sans-serif;
                 font-size: 18px;
                 color: #BDBDBD;
                 cursor: pointer;
@@ -119,7 +116,7 @@
         max-height: 800px;
         font-size: 20px;        
         line-height: 34px;
-        @include Roboto;
+        font-family: 'Roboto', sans-serif;
         font-weight: 300;
         padding-right: 100px;
     }
