--- a/src/sass/mobile-contacts.scss
+++ b/src/sass/mobile-contacts.scss
@@ -1,4 +1,3 @@
-@import 'desktop/mixin';
 .mobile-contacts {
     top: 380px;
     position: absolute;
@@ -14,7 +13,7 @@
         margin-top: 29px;
     }
     &__text {
-        @include Roboto;
+        font-family: 'Roboto', sans-serif;
         line-height: 28px;
         min-height: 250px;
     }
