--- a/src/sass/mobile-popup.scss
+++ b/src/sass/mobile-popup.scss
@@ -1,4 +1,3 @@
-@import 'desktop/mixin';
 .total {
     width: 100%;
     &-bg {
@@ -15,7 +14,7 @@
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    width: 320px;
+    width: 100%;
     height: 100%;
     background: rgba(77, 74, 98, 0.5);
     backdrop-filter: blur(10px);
@@ -38,7 +37,7 @@
         margin-bottom: 10px;
     }
     &__smalltitle {
-        @include Roboto;
+        font-family: 'Roboto', sans-serif;
         font-size: 16px;
         font-weight: normal;        
         margin-bottom: 37px;
@@ -50,7 +49,7 @@
     &__subtitle {
         margin-top: 10px;
         color: #BDBDBD;
-        @include Roboto;
+        font-family: 'Roboto', sans-serif;
         width: 100%;
         font-size: 12px;
         margin-bottom: 37px;
