--- a/src/sass/mobile-service.scss
+++ b/src/sass/mobile-service.scss
@@ -1,4 +1,3 @@
-@import 'desktop/mixin';
 .mobile-service {
     top: 380px;
     position: absolute;
@@ -21,7 +20,7 @@
         margin-bottom: 20px;
     }
     &__text {
-        @include Roboto;
+        font-family: 'Roboto', sans-serif;
         font-size: 16px;
         line-height: 28px;
     }
@@ -48,7 +47,7 @@
         &__add-file {
             margin-bottom: 20px;
             label {
-                @include Roboto;
+                font-family: 'Roboto', sans-serif;
                 font-size: 14px;
                 color: #BDBDBD;
                 cursor: pointer;
