--- a/src/css/main.css
+++ b/src/css/main.css
@@ -407,36 +407,6 @@ input::-webkit-input-placeholder {
 }
 @charset "UTF-8";
 
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-out {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: .1;
-  }
-}
-
 .mob-container {
   position: relative;
   width: auto;
@@ -630,7 +600,6 @@ input::-webkit-input-placeholder {
   position: absolute;
   width: 100%;
   height: 100vh;
-  transition: 0.5s;
 }
 
 .dot {
@@ -647,6 +616,7 @@ input::-webkit-input-placeholder {
 .dot-wrap {
   display: flex;
   cursor: pointer;
+  transition: 0.3s;
 }
 
 .dot-wrap:hover .dot {
@@ -698,6 +668,7 @@ input::-webkit-input-placeholder {
   font-size: 16px;
   background: #605970;
   display: none;
+  transition: 0.3s;
 }
 
 .dot-description__left {
@@ -749,6 +720,20 @@ input::-webkit-input-placeholder {
 .dot-four:hover .dot-description__buy,
 .dot-four:hover .dot-description__debt {
   display: block;
+}
+
+.fade {
+  animation: 1s fade ease;
+}
+
+@keyframes fade {
+  from {
+    opacity: .1;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes mainBg {
@@ -1027,6 +1012,7 @@ body.mobile-popup-callback__active .mobile-popup-callback {
 }
 
 .modal-main {
+  border-top: 1px solid white;
   height: 50vh;
   overflow: auto;
 }
@@ -1400,6 +1386,7 @@ input::-webkit-input-placeholder {
 }
 
 .modal-main {
+  border-top: 1px solid white;
   height: 50vh;
   overflow: auto;
 }
