--- a/src/sass/desktop/_background.scss
+++ b/src/sass/desktop/_background.scss
@@ -30,7 +30,6 @@
         position: absolute;
         width: 100%;
         height: 100vh;
-        transition: 0.5s;
         // animation: mainBg 3s ease infinite;
         // animation-direction: alternate-reverse;
     }
@@ -48,6 +47,7 @@
     &-wrap {
         display: flex;
         cursor: pointer;
+        transition: 0.3s;
         &:hover {
             .dot {
             box-shadow: 0px 0px 25px rgba(255, 255, 255, 0.99);
@@ -93,7 +93,7 @@
             font-size: 16px;
             background: #605970;
             display: none;
-
+            transition: 0.3s;
         }
         &__left {
             margin-left: -200px;
@@ -135,8 +135,17 @@
     }
     
 }    
-
-
+.fade {
+    animation: 1s fade ease;
+}
+@keyframes fade {
+    from {
+        opacity: .1;
+    }
+    to {
+        opacity: 1;
+    }
+}
 
 @keyframes mainBg {
     from {
