--- a/src/sass/desktop/_modal.scss
+++ b/src/sass/desktop/_modal.scss
@@ -22,6 +22,7 @@
         width: 85%;
     }
     &-main {
+        border-top: 1px solid white;
         height: 50vh;
         overflow: auto;
     }
