--- a/src/sass/mobile.scss
+++ b/src/sass/mobile.scss
@@ -119,8 +119,7 @@
     align-items: center;
     background: linear-gradient(260.18deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 80.23%), rgba(255, 255, 255, 0.25);
     &__text { 
-        
-        color: $color-blue;
+        color: #252247;
     }
     &__arrow {
         margin: 0 30px 0 23px;
