--- a/src/css/main.css
+++ b/src/css/main.css
@@ -404,6 +404,7 @@ input::-webkit-input-placeholder {
 }
 .mobile-slider {
   height: 150px;
+  width: 150px;
 }
 @charset "UTF-8";
 
@@ -616,7 +617,6 @@ input::-webkit-input-placeholder {
 .dot-wrap {
   display: flex;
   cursor: pointer;
-  transition: 0.3s;
 }
 
 .dot-wrap:hover .dot {
@@ -650,7 +650,6 @@ input::-webkit-input-placeholder {
 .dot-description {
   white-space: nowrap;
   padding-left: 25px;
-  transition: 0.3s;
 }
 
 .dot-description__bank,
@@ -668,7 +667,6 @@ input::-webkit-input-placeholder {
   font-size: 16px;
   background: #605970;
   display: none;
-  transition: 0.3s;
 }
 
 .dot-description__left {
@@ -1012,9 +1010,7 @@ body.mobile-popup-callback__active .mobile-popup-callback {
 }
 
 .modal-main {
-  border-top: 1px solid white;
   height: 50vh;
-  overflow: auto;
 }
 
 .modal-footer {
@@ -1056,12 +1052,11 @@ body.mobile-popup-callback__active .mobile-popup-callback {
 
 .modal-title {
   font-weight: 900;
-  font-size: 48px;
+  font-size: 40px;
 }
 
 .modal-text {
   height: 100%;
-  max-height: 800px;
   line-height: 34px;
   font-size: 20px;
   font-family: 'Roboto', sans-serif;
@@ -1231,15 +1226,13 @@ body.mobile-popup-callback__active .mobile-popup-callback {
 
 .service-modal-title {
   font-weight: 900;
-  font-size: 48px;
+  font-size: 40px;
   width: 868px;
   margin-bottom: 50px;
 }
 
 .service-modal-text {
   height: 100%;
-  overflow: auto;
-  max-height: 800px;
   font-size: 20px;
   line-height: 34px;
   font-family: 'Roboto', sans-serif;
@@ -1386,9 +1379,7 @@ input::-webkit-input-placeholder {
 }
 
 .modal-main {
-  border-top: 1px solid white;
   height: 50vh;
-  overflow: auto;
 }
 
 .modal-footer {
@@ -1430,12 +1421,11 @@ input::-webkit-input-placeholder {
 
 .modal-title {
   font-weight: 900;
-  font-size: 48px;
+  font-size: 40px;
 }
 
 .modal-text {
   height: 100%;
-  max-height: 800px;
   line-height: 34px;
   font-size: 20px;
   font-family: 'Roboto', sans-serif;
